[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/inimigo.png" type="Texture" id=1]
[ext_resource path="res://object_scenes/enemy.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Walking",
"speed": 15.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 5.016, 5.98062 )

[sub_resource type="CircleShape2D" id=11]
radius = 47.2853

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 5.94526, 6.77208 )

[node name="Enemy" type="KinematicBody2D" groups=["Enemies"]]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "Walking"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.99395, 1.99256 )
shape = SubResource( 10 )

[node name="Tracking" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tracking"]
shape = SubResource( 11 )

[node name="Damage" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Damage"]
position = Vector2( 1.01435, 2.13773 )
shape = SubResource( 12 )

[connection signal="body_entered" from="Tracking" to="." method="_on_Tracking_body_entered"]
[connection signal="body_exited" from="Tracking" to="." method="_on_Tracking_body_exited"]
[connection signal="body_entered" from="Damage" to="." method="_on_Damage_body_entered"]
